# HetSys-Peer-UQ

./: README.md  main.py  pyproject.toml  requirements.txt
Data/Au-000/+0.00V/: graphene.out  graphene0.onetep  graphene0.val_bands  graphene0_vacuum.val_bands
Data/Au-000/+0.10V/: graphene.out  graphene0.onetep  graphene0.val_bands  graphene0.xyz  graphene0_vacuum.val_bands
Data/Au-000/-0.10V/: $modules_list  graphene.out  graphene0.onetep  graphene0.val_bands  graphene0_vacuum.val_bands
Data/Au-001/Site-000/+0.00V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-000/+0.10V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-000/-0.10V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0.xyz  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-002/+0.00V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-002/+0.10V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-002/-0.10V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  Au-Graphene0.xyz  Au-Graphene0_vacuum.val_bands
Data/Au-001/Site-005/+0.00V/: Au-Graphene.out  Au-Graphene0.onetep  Au-Graphene0.val_bands  (+1 more)
Figures/: Dirac_Energies.csv  Dirac_deltas.csv  UQ_results.csv  Uncertainty_Quantification_Values.csv
Provided Code/: cli_config.py  data_structures.py  dos_builder.py  dos_plotter.py  parameters.py  val_bands_parser.py
(+9 files in other folders)
