[project]
name = "hetsys-uq-peer-exercise"
version = "0.1.0"
description = "Code for the PX915 Peer-to-Peer UQ exercise"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Gianluca Seaford", email = "luca.seaford@warwick.ac.uk" }]
dependencies = [
  "numpy>=1.26,<2.0",
  "matplotlib>=3.8,<3.9",
]